# DeepLearningDashboard

./: .gitignore  README.md  check_gpu.py  main.py  pyproject.toml  server.py  test.py  trainer.py
frontend/src/: App.css  App.jsx
